// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple MaterialButtonLink matches snapshot. 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="haha"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      I am button
    </a>
  </span>
</button>
`;

exports[`Simple MaterialButtonLink with inherit color matches snapshot. 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
      href="haha"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      I am button
    </a>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Simple MaterialButtonLink with primary color matches snapshot. 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="haha"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      I am button
    </a>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Simple MaterialButtonLink with secondary color matches snapshot. 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorSecondary"
      href="haha"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      I am button
    </a>
  </span>
</button>
`;
